Дописали верстку административной страницы

--- a/assets/css/admin.css
+++ b/assets/css/admin.css
@@ -197,7 +197,7 @@ SIDEBAR
 
 .posts h2{
     text-align: center;
-    margin: 1.5rem 0;
+    margin: 2rem 0 0 0.4куь;
 }
 
 .posts .title-table div{
@@ -223,4 +223,8 @@ SIDEBAR
 
 .posts .post .id{
     font-weight: bold;
+}
+
+.add-post form div{
+    margin: 2rem 0;
 }
